--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: lightcyan;
-    width: 1500px;
+    margin: 0;
+    display: flex; /* activa flexbox */
+    justify-content: center; /* centra horizontalmente */
+    align-items: center;     /* centra verticalmente */
 }
 
 nav {
@@ -46,15 +49,6 @@ nav button:hover {
   background-color: #5aa78a;
   color: white;
 }
-.objetivo {
-    height: auto;
-    width: auto;
-    padding: 40px;
-}
-.objetivo p {
-    color: black;
-    font-size: 18px;
-}
 .box2{
     display: flex;
     flex-direction: row;
@@ -90,5 +84,22 @@ nav button:hover {
     background-color: lightcyan;  
     filter: brightness(1.05) contrast(1.1);
     mix-blend-mode: darken;
-
+}
+.objetivo {
+    height: auto;
+    width: auto;
+    padding: 5px 15px;
+    border: 5px solid #DEA193;
+    border-radius: 10px;
+}
+.objetivo p {
+    color: black;
+    font-size: 18px;
+}
+.box1 {
+    width: 1250px;
+}
+.box2 {
+    border: 2px solid coral;
+    border-radius: 10px;
 }
